--- a/Zipssa/app/src/main/res/layout/main_activity.xml
+++ b/Zipssa/app/src/main/res/layout/main_activity.xml
@@ -77,7 +77,7 @@
 				android:layout_height="wrap_content"
 				android:layout_marginTop="@dimen/main_bottom_bar_text_marginT"
 				android:fontFamily="@font/daylight_210"
-				android:text="촬영"
+				android:text="추가"
 				android:textColor="@color/main_bottom_bar_text"
 				android:textSize="@dimen/main_bottom_bar_text"/>
 		</LinearLayout>
