--- a/Zipssa/app/src/main/res/layout/add_alarm_activity.xml
+++ b/Zipssa/app/src/main/res/layout/add_alarm_activity.xml
@@ -58,6 +58,104 @@
 				<TextView
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
+					android:text="처방전 촬영"
+					android:fontFamily="@font/bmjua"
+					android:textColor="@color/main_theme"
+					android:layout_marginTop="@dimen/alarm_page_name_marginT"
+					android:layout_marginBottom="@dimen/alarm_page_name_marginB"
+					android:layout_marginHorizontal="@dimen/alarm_page_name_marginH"
+					android:textSize="@dimen/alarm_page_name_text" />
+
+				<LinearLayout
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:orientation="horizontal"
+					android:elevation="@dimen/shadow_size"
+					android:paddingHorizontal="@dimen/alarm_page_box_paddingH"
+					android:paddingVertical="@dimen/alarm_page_box_paddingV"
+					android:clipToPadding="false">
+
+					<LinearLayout
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:orientation="vertical">
+
+						<LinearLayout
+							android:id="@+id/image_from_camera"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:orientation="horizontal"
+							android:gravity="center"
+							android:background="@drawable/alarm_image_btn"
+							android:paddingHorizontal="@dimen/alarm_page_image_paddingH"
+							android:layout_margin="@dimen/alarm_page_image_btn_margin"
+							android:elevation="@dimen/shadow_size">
+
+							<ImageView
+								android:layout_width="@dimen/alarm_page_image_size"
+								android:layout_height="@dimen/alarm_page_image_size"
+								android:adjustViewBounds="true"
+								android:layout_marginVertical="@dimen/alarm_page_image_margin"
+								android:layout_marginRight="@dimen/alarm_page_image_margin"
+								android:src="@drawable/from_camera" />
+
+							<TextView
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:fontFamily="@font/lotte_dream_bold"
+								android:textColor="@color/text_color"
+								android:textSize="@dimen/alarm_page_content_text"
+								android:text="카메라" />
+						</LinearLayout>
+
+						<LinearLayout
+							android:id="@+id/image_from_gallery"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:orientation="horizontal"
+							android:gravity="center"
+							android:background="@drawable/alarm_image_btn"
+							android:paddingHorizontal="@dimen/alarm_page_image_paddingH"
+							android:layout_margin="@dimen/alarm_page_image_btn_margin"
+							android:elevation="@dimen/shadow_size">
+
+							<ImageView
+								android:layout_width="@dimen/alarm_page_image_size"
+								android:layout_height="@dimen/alarm_page_image_size"
+								android:adjustViewBounds="true"
+								android:layout_marginVertical="@dimen/alarm_page_image_margin"
+								android:layout_marginRight="@dimen/alarm_page_image_margin"
+								android:src="@drawable/from_gallery" />
+
+							<TextView
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:fontFamily="@font/lotte_dream_bold"
+								android:textColor="@color/text_color"
+								android:textSize="@dimen/alarm_page_content_text"
+								android:text="사진첩" />
+						</LinearLayout>
+					</LinearLayout>
+
+					<View
+						android:layout_width="@dimen/split_line"
+						android:layout_height="match_parent"
+						android:background="@color/split_line"
+						android:layout_marginHorizontal="@dimen/alarm_page_image_split_marginH"/>
+
+					<androidx.recyclerview.widget.RecyclerView
+						android:id="@+id/image_container"
+						android:layout_width="match_parent"
+						android:layout_height="match_parent"
+						android:background="@drawable/white_background_box"
+						android:elevation="@dimen/shadow_size"
+						android:orientation="horizontal"
+						android:padding="@dimen/alarm_page_imagecontainer_padding"/>
+				</LinearLayout>
+
+				<TextView
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
 					android:text="이름 설정"
 					android:fontFamily="@font/bmjua"
 					android:textColor="@color/main_theme"
@@ -108,7 +206,7 @@
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
 						android:orientation="horizontal"
-						android:layout_marginHorizontal="@dimen/alarm_page_content_marginH" >
+						android:layout_marginHorizontal="@dimen/alarm_page_content_marginH">
 
 						<TextView
 							android:layout_width="wrap_content"
@@ -140,7 +238,7 @@
 						android:layout_height="wrap_content"
 						android:overScrollMode="never"
 						android:layout_marginHorizontal="@dimen/alarm_page_content_marginH"
-						android:paddingVertical="@dimen/alarm_page_content_distanceH"/>
+						android:paddingVertical="@dimen/alarm_page_content_distanceH" />
 				</LinearLayout>
 
 				<TextView
@@ -405,7 +503,7 @@
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
 						android:orientation="vertical"
-						android:padding="@dimen/alarm_page_box_paddingH"/>
+						android:padding="@dimen/alarm_page_box_paddingH" />
 				</LinearLayout>
 
 				<Button
