--- a/Zipssa/app/src/main/res/layout/mypage_history_activity.xml
+++ b/Zipssa/app/src/main/res/layout/mypage_history_activity.xml
@@ -4,6 +4,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:background="@color/background_theme"
 	android:orientation="vertical">
 
 	<FrameLayout
@@ -24,7 +25,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"
-			android:text="복용 내역"
+			android:text="복용내역"
 			android:fontFamily="@font/bmjua"
 			android:textSize="@dimen/titlebar_title_text"
 			android:textColor="#FFFFFF" />
@@ -32,43 +33,49 @@
 
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:layout_marginTop="@dimen/mypage_marginV"
-		android:background="@color/background_theme"
-		android:orientation="vertical">
+		android:layout_height="wrap_content"
+		android:orientation="horizontal"
+		android:layout_marginVertical="@dimen/mypage_marginV" >
 
-		<TextView
-			android:id="@+id/history_all_btn"
-			android:layout_width="match_parent"
+		<RadioButton
+			android:id="@+id/history_all"
+			android:layout_width="0dp"
 			android:layout_height="wrap_content"
-			android:paddingVertical="@dimen/mypage_menu_paddingV"
-			android:paddingHorizontal="@dimen/mypage_menu_paddingH"
-			android:fontFamily="@font/nanum_square_ac"
-			android:textSize="@dimen/mypage_content_text"
-			android:textColor="@color/text_color"
-			android:text="전체 내역"/>
+			android:layout_weight="1"
+			android:checked="true"
+			android:background="@drawable/mypage_tab_selector"
+			android:button="@drawable/empty_selector"
+			android:gravity="center"
+			android:padding="@dimen/mypage_tab_padding"
+			android:fontFamily="@font/lotte_dream_bold"
+			android:textSize="@dimen/mypage_tabbtn_text"
+			android:textColor="@drawable/mypage_tab_text_color"
+			android:text="전체 내역" />
 
-		<View
-			android:layout_width="match_parent"
-			android:layout_height="@dimen/split_line"
-			android:background="@color/split_line"
-			android:layout_marginHorizontal="@dimen/history_split_paddingH"/>
-
-		<TextView
-			android:id="@+id/history_photo_btn"
-			android:layout_width="match_parent"
+		<RadioButton
+			android:id="@+id/history_photo"
+			android:layout_width="0dp"
 			android:layout_height="wrap_content"
-			android:paddingVertical="@dimen/mypage_menu_paddingV"
-			android:paddingHorizontal="@dimen/mypage_menu_paddingH"
-			android:fontFamily="@font/nanum_square_ac"
-			android:textSize="@dimen/mypage_content_text"
-			android:textColor="@color/text_color"
-			android:text="처방전 내역"/>
-
-		<View
-			android:layout_width="match_parent"
-			android:layout_height="@dimen/split_line"
-			android:background="@color/split_line"
-			android:layout_marginHorizontal="@dimen/history_split_paddingH"/>
+			android:layout_weight="1"
+			android:background="@drawable/mypage_tab_selector"
+			android:button="@drawable/empty_selector"
+			android:gravity="center"
+			android:padding="@dimen/mypage_tab_padding"
+			android:fontFamily="@font/lotte_dream_bold"
+			android:textSize="@dimen/mypage_tabbtn_text"
+			android:textColor="@drawable/mypage_tab_text_color"
+			android:text="처방전 내역" />
 	</LinearLayout>
+
+	<View
+		android:layout_width="match_parent"
+		android:layout_height="@dimen/split_line"
+		android:background="@color/split_line"
+		android:layout_marginHorizontal="@dimen/mypage_tab_split_marginH"/>
+
+	<androidx.recyclerview.widget.RecyclerView
+		android:id="@+id/history_container"
+		android:layout_width="match_parent"
+		android:layout_height="0dp"
+		android:layout_weight="1" />
 </LinearLayout>
