--- a/Zipssa/app/src/main/res/layout/mypage_notice_activity.xml
+++ b/Zipssa/app/src/main/res/layout/mypage_notice_activity.xml
@@ -35,6 +35,7 @@
 		android:id="@+id/notice_container"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		android:background="@color/background_theme"
 		android:layout_marginTop="@dimen/mypage_marginV"
 		android:paddingHorizontal="@dimen/notice_paddingH" />
 </LinearLayout>
