Attach API about alarm and label

--- a/Zipssa/app/src/main/res/layout/edit_label_popup.xml
+++ b/Zipssa/app/src/main/res/layout/edit_label_popup.xml
@@ -176,7 +176,7 @@
 		</LinearLayout>
 		
 		<TextView
-			android:id="@+id/add_label_btn"
+			android:id="@+id/edit_label_btn"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:background="@drawable/add_label_btn"
