--- a/Zipssa/app/src/main/res/layout/mypage_history_all_item.xml
+++ b/Zipssa/app/src/main/res/layout/mypage_history_all_item.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/history_item"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:paddingHorizontal="@dimen/history_item_paddingH"
 	android:paddingVertical="@dimen/history_item_paddingV"
 	android:clipToPadding="false"
-	android:orientation="horizontal">
+	android:orientation="vertical">
 
 	<LinearLayout
 		android:layout_width="match_parent"
@@ -111,5 +112,28 @@
 					android:text="회 복용" />
 			</LinearLayout>
 		</LinearLayout>
+	</LinearLayout>
+
+	<LinearLayout
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal">
+
+		<TextView
+			android:id="@+id/created_date"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:fontFamily="@font/nanum_square_ac"
+			android:textSize="@dimen/history_all_date_text"
+			android:textColor="@color/text_color_gray"
+			android:text="00.00.00" />
+
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:fontFamily="@font/nanum_square_ac"
+			android:textSize="@dimen/history_all_content_text"
+			android:textColor="@color/text_color_gray"
+			android:text="입력" />
 	</LinearLayout>
 </LinearLayout>
