--- a/Zipssa/app/src/main/res/layout/mypage_sync_addcrew_popup.xml
+++ b/Zipssa/app/src/main/res/layout/mypage_sync_addcrew_popup.xml
@@ -18,7 +18,7 @@
 		android:text="인증번호는 3분 이내에 입력해 주세요"/>
 
 	<EditText
-		android:id="@+id/validation_code"
+		android:id="@+id/validation_code_input"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:gravity="center"
