--- a/Zipssa/app/src/main/res/layout/mypage_sync_item.xml
+++ b/Zipssa/app/src/main/res/layout/mypage_sync_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/sync_item"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:orientation="horizontal"
@@ -24,6 +25,7 @@
 		android:text="이름"/>
 
 	<ImageView
+		android:id="@+id/sync_remove"
 		android:layout_width="wrap_content"
 		android:layout_height="match_parent"
 		android:adjustViewBounds="true"
