--- a/Zipssa/app/src/main/res/layout/edit_alarm_activity.xml
+++ b/Zipssa/app/src/main/res/layout/edit_alarm_activity.xml
@@ -390,7 +390,7 @@
 							android:background="@drawable/add_alarm_date_selector"
 							android:fontFamily="@font/nanum_square_ac"
 							android:textSize="@dimen/alarm_page_show_text"
-							android:textColor="@color/text_color"
+							android:textColor="@drawable/text_color_selector"
 							android:layout_margin="@dimen/alarm_page_repeats_margin"
 							android:checked="true"
 							android:enabled="false"
@@ -404,7 +404,7 @@
 							android:layout_weight="1"
 							android:fontFamily="@font/nanum_square_ac"
 							android:textSize="@dimen/alarm_page_show_text"
-							android:textColor="@color/text_color"
+							android:textColor="@drawable/text_color_selector"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/alarm_page_repeats_margin"
 							android:checked="true"
@@ -419,7 +419,7 @@
 							android:layout_weight="1"
 							android:fontFamily="@font/nanum_square_ac"
 							android:textSize="@dimen/alarm_page_show_text"
-							android:textColor="@color/text_color"
+							android:textColor="@drawable/text_color_selector"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/alarm_page_repeats_margin"
 							android:checked="true"
@@ -434,7 +434,7 @@
 							android:layout_weight="1"
 							android:fontFamily="@font/nanum_square_ac"
 							android:textSize="@dimen/alarm_page_show_text"
-							android:textColor="@color/text_color"
+							android:textColor="@drawable/text_color_selector"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/alarm_page_repeats_margin"
 							android:checked="true"
@@ -449,7 +449,7 @@
 							android:layout_weight="1"
 							android:fontFamily="@font/nanum_square_ac"
 							android:textSize="@dimen/alarm_page_show_text"
-							android:textColor="@color/text_color"
+							android:textColor="@drawable/text_color_selector"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/alarm_page_repeats_margin"
 							android:checked="true"
@@ -464,7 +464,7 @@
 							android:layout_weight="1"
 							android:fontFamily="@font/nanum_square_ac"
 							android:textSize="@dimen/alarm_page_show_text"
-							android:textColor="@color/text_color"
+							android:textColor="@drawable/text_color_selector"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/alarm_page_repeats_margin"
 							android:checked="true"
@@ -479,7 +479,7 @@
 							android:layout_weight="1"
 							android:fontFamily="@font/nanum_square_ac"
 							android:textSize="@dimen/alarm_page_show_text"
-							android:textColor="@color/text_color"
+							android:textColor="@drawable/text_color_selector"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/alarm_page_repeats_margin"
 							android:checked="true"
