--- a/Zipssa/app/src/main/res/drawable/add_alarm_date_selector.xml
+++ b/Zipssa/app/src/main/res/drawable/add_alarm_date_selector.xml
@@ -2,8 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:state_checked="true">
 		<shape>
-			<solid android:color="@color/button_theme" />
-			<stroke android:color="@color/text_color" android:width="1dp"/>
+			<solid android:color="@color/main_theme" />
 		</shape>
 	</item>
 
