--- a/Zipssa/app/src/main/res/layout/add_alarm_activity.xml
+++ b/Zipssa/app/src/main/res/layout/add_alarm_activity.xml
@@ -245,6 +245,7 @@
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
 						android:overScrollMode="never"
+						android:isScrollContainer="false"
 						android:layout_marginHorizontal="@dimen/alarm_page_content_marginH"
 						android:paddingVertical="@dimen/alarm_page_content_distanceH" />
 				</LinearLayout>
@@ -390,7 +391,7 @@
 							android:background="@drawable/add_alarm_date_selector"
 							android:fontFamily="@font/nanum_square_ac"
 							android:textSize="@dimen/alarm_page_show_text"
-							android:textColor="@color/text_color"
+							android:textColor="@drawable/text_color_selector"
 							android:layout_margin="@dimen/alarm_page_repeats_margin"
 							android:checked="true"
 							android:enabled="false"
@@ -404,7 +405,7 @@
 							android:layout_weight="1"
 							android:fontFamily="@font/nanum_square_ac"
 							android:textSize="@dimen/alarm_page_show_text"
-							android:textColor="@color/text_color"
+							android:textColor="@drawable/text_color_selector"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/alarm_page_repeats_margin"
 							android:checked="true"
@@ -419,7 +420,7 @@
 							android:layout_weight="1"
 							android:fontFamily="@font/nanum_square_ac"
 							android:textSize="@dimen/alarm_page_show_text"
-							android:textColor="@color/text_color"
+							android:textColor="@drawable/text_color_selector"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/alarm_page_repeats_margin"
 							android:checked="true"
@@ -434,7 +435,7 @@
 							android:layout_weight="1"
 							android:fontFamily="@font/nanum_square_ac"
 							android:textSize="@dimen/alarm_page_show_text"
-							android:textColor="@color/text_color"
+							android:textColor="@drawable/text_color_selector"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/alarm_page_repeats_margin"
 							android:checked="true"
@@ -449,7 +450,7 @@
 							android:layout_weight="1"
 							android:fontFamily="@font/nanum_square_ac"
 							android:textSize="@dimen/alarm_page_show_text"
-							android:textColor="@color/text_color"
+							android:textColor="@drawable/text_color_selector"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/alarm_page_repeats_margin"
 							android:checked="true"
@@ -464,7 +465,7 @@
 							android:layout_weight="1"
 							android:fontFamily="@font/nanum_square_ac"
 							android:textSize="@dimen/alarm_page_show_text"
-							android:textColor="@color/text_color"
+							android:textColor="@drawable/text_color_selector"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/alarm_page_repeats_margin"
 							android:checked="true"
@@ -479,7 +480,7 @@
 							android:layout_weight="1"
 							android:fontFamily="@font/nanum_square_ac"
 							android:textSize="@dimen/alarm_page_show_text"
-							android:textColor="@color/text_color"
+							android:textColor="@drawable/text_color_selector"
 							android:background="@drawable/add_alarm_date_selector"
 							android:layout_margin="@dimen/alarm_page_repeats_margin"
 							android:checked="true"
