--- a/Zipssa/app/src/main/res/layout/mypage_setting_activity.xml
+++ b/Zipssa/app/src/main/res/layout/mypage_setting_activity.xml
@@ -38,7 +38,7 @@
 		android:orientation="vertical">
 
 		<Switch
-			android:id="@+id/push_alert"
+			android:id="@+id/setting_notify"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:paddingVertical="@dimen/mypage_menu_paddingV"
@@ -46,58 +46,7 @@
 			android:fontFamily="@font/nanum_square_ac"
 			android:textSize="@dimen/mypage_content_text"
 			android:textColor="@color/text_color"
-			android:text="푸시 알림"/>
-
-		<View
-			android:layout_width="match_parent"
-			android:layout_height="@dimen/split_line"
-			android:background="@color/split_line"
-			android:layout_marginHorizontal="@dimen/setting_split_marginH"/>
-
-		<Switch
-			android:id="@+id/alert_in_app"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:paddingVertical="@dimen/mypage_menu_paddingV"
-			android:paddingHorizontal="@dimen/mypage_menu_paddingH"
-			android:fontFamily="@font/nanum_square_ac"
-			android:textSize="@dimen/mypage_content_text"
-			android:textColor="@color/text_color"
-			android:text="앱 실행 중 알림"/>
-
-		<View
-			android:layout_width="match_parent"
-			android:layout_height="@dimen/split_line"
-			android:background="@color/split_line"
-			android:layout_marginHorizontal="@dimen/setting_split_marginH"/>
-
-		<Switch
-			android:id="@+id/sound_in_app"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:paddingVertical="@dimen/mypage_menu_paddingV"
-			android:paddingHorizontal="@dimen/mypage_menu_paddingH"
-			android:fontFamily="@font/nanum_square_ac"
-			android:textSize="@dimen/mypage_content_text"
-			android:textColor="@color/text_color"
-			android:text="앱 실행 중 소리"/>
-
-		<View
-			android:layout_width="match_parent"
-			android:layout_height="@dimen/split_line"
-			android:background="@color/split_line"
-			android:layout_marginHorizontal="@dimen/setting_split_marginH"/>
-
-		<Switch
-			android:id="@+id/vibrate_in_app"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:paddingVertical="@dimen/mypage_menu_paddingV"
-			android:paddingHorizontal="@dimen/mypage_menu_paddingH"
-			android:fontFamily="@font/nanum_square_ac"
-			android:textSize="@dimen/mypage_content_text"
-			android:textColor="@color/text_color"
-			android:text="앱 실행 중 진동"/>
+			android:text="상단바 알림"/>
 
 		<View
 			android:layout_width="match_parent"
