--- a/Zipssa/app/src/main/res/values/arrays.xml
+++ b/Zipssa/app/src/main/res/values/arrays.xml
@@ -12,6 +12,6 @@
 
 	<string-array name="search_type">
 		<item>통합 검색</item>
-		<item>약물 이름</item>
+		<item>약물명</item>
 	</string-array>
 </resources>
