--- a/Zipssa/app/src/main/res/layout/list_fragment.xml
+++ b/Zipssa/app/src/main/res/layout/list_fragment.xml
@@ -26,7 +26,7 @@
 				<LinearLayout
 					android:id="@+id/main_name_bar"
 					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
+					android:layout_height="match_parent"
 					android:orientation="horizontal"
 					android:layout_gravity="center|bottom"
 					android:gravity="center|bottom"
