--- a/Zipssa/app/src/main/res/layout/list_item.xml
+++ b/Zipssa/app/src/main/res/layout/list_item.xml
@@ -126,11 +126,10 @@
 						android:id="@+id/main_item_cur_count"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:gravity="center"
 						android:fontFamily="@font/nanum_square_ac"
-						android:text="0"
-						android:textSize="@dimen/main_item_content_text"
-						android:textColor="@color/text_color"/>
+						android:gravity="center"
+						android:textColor="@color/text_color"
+						android:textSize="@dimen/main_item_content_text" />
 
 					<!--
 					<LinearLayout
