--- a/Zipssa/app/src/main/res/layout/main_activity.xml
+++ b/Zipssa/app/src/main/res/layout/main_activity.xml
@@ -1,153 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:background="@color/background_theme"
-	android:orientation="vertical">
-
-	<LinearLayout
-		android:id="@+id/main_container"
-		android:layout_width="match_parent"
-		android:layout_height="0dp"
-		android:layout_weight="1"
-		android:orientation="horizontal" />
+	android:layout_height="match_parent">
 
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="@dimen/main_bottom_bar_sizeH"
-		android:orientation="horizontal"
-		android:background="@color/main_bottom_bar" >
+		android:layout_height="match_parent"
+		android:background="@color/background_theme"
+		android:orientation="vertical" >
 
 		<LinearLayout
-			android:id="@+id/bar_home"
-			android:layout_width="0dp"
-			android:layout_height="match_parent"
+			android:id="@+id/main_container"
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
 			android:layout_weight="1"
-			android:orientation="vertical"
-			android:gravity="center"
-			android:padding="@dimen/main_bottom_bar_padding"
-			android:layout_marginVertical="@dimen/main_bottom_bar_marginV"
-			android:layout_marginHorizontal="@dimen/main_bottom_bar_marginH">
-
-			<ImageView
-				android:layout_width="wrap_content"
-				android:layout_height="0dp"
-				android:layout_weight="1"
-				android:src="@drawable/bar_home"
-				android:adjustViewBounds="true"/>
-
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginTop="@dimen/main_bottom_bar_text_marginT"
-				android:fontFamily="@font/nanum_square_ac"
-				android:text="홈"
-				android:textColor="@color/main_bottom_bar_text"
-				android:textSize="@dimen/main_bottom_bar_text"/>
-		</LinearLayout>
-
-		<View
-			android:layout_width="@dimen/split_line"
-			android:layout_height="match_parent"
-			android:background="#FFFFFF"
-			android:layout_marginVertical="@dimen/main_bottom_bar_split_marginV"/>
+			android:orientation="horizontal" />
 
 		<LinearLayout
-			android:id="@+id/bar_add"
-			android:layout_width="0dp"
-			android:layout_height="match_parent"
-			android:layout_weight="1"
-			android:orientation="vertical"
-			android:gravity="center"
-			android:padding="@dimen/main_bottom_bar_padding"
-			android:layout_marginVertical="@dimen/main_bottom_bar_marginV"
-			android:layout_marginHorizontal="@dimen/main_bottom_bar_marginH">
+			android:layout_width="match_parent"
+			android:layout_height="@dimen/main_bottom_bar_sizeH"
+			android:orientation="horizontal"
+			android:background="@color/main_bottom_bar" >
 
-			<ImageView
-				android:layout_width="wrap_content"
-				android:layout_height="0dp"
+			<LinearLayout
+				android:id="@+id/bar_home"
+				android:layout_width="0dp"
+				android:layout_height="match_parent"
 				android:layout_weight="1"
-				android:src="@drawable/bar_add"
-				android:adjustViewBounds="true"/>
+				android:orientation="vertical"
+				android:gravity="center"
+				android:padding="@dimen/main_bottom_bar_padding"
+				android:layout_marginVertical="@dimen/main_bottom_bar_marginV"
+				android:layout_marginHorizontal="@dimen/main_bottom_bar_marginH">
 
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginTop="@dimen/main_bottom_bar_text_marginT"
-				android:fontFamily="@font/nanum_square_ac"
-				android:text="추가"
-				android:textColor="@color/main_bottom_bar_text"
-				android:textSize="@dimen/main_bottom_bar_text"/>
-		</LinearLayout>
+				<ImageView
+					android:layout_width="wrap_content"
+					android:layout_height="0dp"
+					android:layout_weight="1"
+					android:src="@drawable/bar_home"
+					android:adjustViewBounds="true"/>
 
-		<View
-			android:layout_width="@dimen/split_line"
-			android:layout_height="match_parent"
-			android:background="#FFFFFF"
-			android:layout_marginVertical="@dimen/main_bottom_bar_split_marginV"/>
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="@dimen/main_bottom_bar_text_marginT"
+					android:fontFamily="@font/nanum_square_ac"
+					android:text="홈"
+					android:textColor="@color/main_bottom_bar_text"
+					android:textSize="@dimen/main_bottom_bar_text"/>
+			</LinearLayout>
 
-		<LinearLayout
-			android:id="@+id/bar_search"
-			android:layout_width="0dp"
-			android:layout_height="match_parent"
-			android:layout_weight="1"
-			android:orientation="vertical"
-			android:gravity="center"
-			android:padding="@dimen/main_bottom_bar_padding"
-			android:layout_marginVertical="@dimen/main_bottom_bar_marginV"
-			android:layout_marginHorizontal="@dimen/main_bottom_bar_marginH">
+			<View
+				android:layout_width="@dimen/split_line"
+				android:layout_height="match_parent"
+				android:background="#FFFFFF"
+				android:layout_marginVertical="@dimen/main_bottom_bar_split_marginV"/>
 
-			<ImageView
-				android:layout_width="wrap_content"
-				android:layout_height="0dp"
+			<LinearLayout
+				android:id="@+id/bar_add"
+				android:layout_width="0dp"
+				android:layout_height="match_parent"
 				android:layout_weight="1"
-				android:src="@drawable/bar_search"
-				android:adjustViewBounds="true"/>
+				android:orientation="vertical"
+				android:gravity="center"
+				android:padding="@dimen/main_bottom_bar_padding"
+				android:layout_marginVertical="@dimen/main_bottom_bar_marginV"
+				android:layout_marginHorizontal="@dimen/main_bottom_bar_marginH">
 
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginTop="@dimen/main_bottom_bar_text_marginT"
-				android:fontFamily="@font/nanum_square_ac"
-				android:text="검색"
-				android:textColor="@color/main_bottom_bar_text"
-				android:textSize="@dimen/main_bottom_bar_text"/>
-		</LinearLayout>
+				<ImageView
+					android:layout_width="wrap_content"
+					android:layout_height="0dp"
+					android:layout_weight="1"
+					android:src="@drawable/bar_add"
+					android:adjustViewBounds="true"/>
 
-		<View
-			android:layout_width="@dimen/split_line"
-			android:layout_height="match_parent"
-			android:background="#FFFFFF"
-			android:layout_marginVertical="@dimen/main_bottom_bar_split_marginV"/>
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="@dimen/main_bottom_bar_text_marginT"
+					android:fontFamily="@font/nanum_square_ac"
+					android:text="추가"
+					android:textColor="@color/main_bottom_bar_text"
+					android:textSize="@dimen/main_bottom_bar_text"/>
+			</LinearLayout>
 
-		<LinearLayout
-			android:id="@+id/bar_mypage"
-			android:layout_width="0dp"
-			android:layout_height="match_parent"
-			android:layout_weight="1"
-			android:orientation="vertical"
-			android:gravity="center"
-			android:padding="@dimen/main_bottom_bar_padding"
-			android:layout_marginVertical="@dimen/main_bottom_bar_marginV"
-			android:layout_marginHorizontal="@dimen/main_bottom_bar_marginH">
+			<View
+				android:layout_width="@dimen/split_line"
+				android:layout_height="match_parent"
+				android:background="#FFFFFF"
+				android:layout_marginVertical="@dimen/main_bottom_bar_split_marginV"/>
 
-			<ImageView
-				android:layout_width="wrap_content"
-				android:layout_height="0dp"
+			<LinearLayout
+				android:id="@+id/bar_search"
+				android:layout_width="0dp"
+				android:layout_height="match_parent"
 				android:layout_weight="1"
-				android:src="@drawable/bar_page"
-				android:adjustViewBounds="true"/>
+				android:orientation="vertical"
+				android:gravity="center"
+				android:padding="@dimen/main_bottom_bar_padding"
+				android:layout_marginVertical="@dimen/main_bottom_bar_marginV"
+				android:layout_marginHorizontal="@dimen/main_bottom_bar_marginH">
 
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginTop="@dimen/main_bottom_bar_text_marginT"
-				android:fontFamily="@font/nanum_square_ac"
-				android:text="마이페이지"
-				android:textColor="@color/main_bottom_bar_text"
-				android:textSize="@dimen/main_bottom_bar_text"/>
+				<ImageView
+					android:layout_width="wrap_content"
+					android:layout_height="0dp"
+					android:layout_weight="1"
+					android:src="@drawable/bar_search"
+					android:adjustViewBounds="true"/>
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="@dimen/main_bottom_bar_text_marginT"
+					android:fontFamily="@font/nanum_square_ac"
+					android:text="검색"
+					android:textColor="@color/main_bottom_bar_text"
+					android:textSize="@dimen/main_bottom_bar_text"/>
+			</LinearLayout>
+
+			<View
+				android:layout_width="@dimen/split_line"
+				android:layout_height="match_parent"
+				android:background="#FFFFFF"
+				android:layout_marginVertical="@dimen/main_bottom_bar_split_marginV"/>
+
+			<LinearLayout
+				android:id="@+id/bar_mypage"
+				android:layout_width="0dp"
+				android:layout_height="match_parent"
+				android:layout_weight="1"
+				android:orientation="vertical"
+				android:gravity="center"
+				android:padding="@dimen/main_bottom_bar_padding"
+				android:layout_marginVertical="@dimen/main_bottom_bar_marginV"
+				android:layout_marginHorizontal="@dimen/main_bottom_bar_marginH">
+
+				<ImageView
+					android:layout_width="wrap_content"
+					android:layout_height="0dp"
+					android:layout_weight="1"
+					android:src="@drawable/bar_page"
+					android:adjustViewBounds="true"/>
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="@dimen/main_bottom_bar_text_marginT"
+					android:fontFamily="@font/nanum_square_ac"
+					android:text="마이페이지"
+					android:textColor="@color/main_bottom_bar_text"
+					android:textSize="@dimen/main_bottom_bar_text"/>
+			</LinearLayout>
 		</LinearLayout>
 	</LinearLayout>
-</LinearLayout>
+
+	<include
+		android:id="@+id/loading"
+		layout="@layout/loading_activity"
+		android:visibility="gone"/>
+</FrameLayout>
