--- a/Zipssa/app/src/main/res/layout/account_contract_activity.xml
+++ b/Zipssa/app/src/main/res/layout/account_contract_activity.xml
@@ -21,6 +21,7 @@
 			android:src="@drawable/ic_arrow_back_24px" />
 
 		<TextView
+			android:id="@+id/contract_title"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"
